fix hypercontrast, add new background

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -103,8 +103,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url(../img/freshCut.png);
-    background: rgba(68, 68, 68, 0.9), url(../img/freshCut.png);
+    background: url(../img/17.jpg);
+    background: rgba(68, 68, 68, 0.9), url(../img/17.jpg);
     background-attachment: fixed;
     background-size: cover; }
 
@@ -134,9 +134,6 @@ header {
   width: 100%; }
 
 .text-secondary {
-  text-shadow: 2px 0 black, -2px 0 black, 0 2px black, 0 -2px black,
-               1px 1px black, -1px -1px black, 1px -1px black, -1px 1px black;
-
   color: chartreuse; }
 
 main {
